# dashboard

./: .dockerignore  .gitignore  .gitmodules  README.md  docker-compose.yml  dockerfile  pyproject.toml  run_docker.bat  run_docker.sh
Dashboard/: .gitignore  README.md  app.py  config.py  requirements.txt  save-prediction-influxDB.py  save-training-influxDB.py
Dashboard/Data/: IndPenSim_testset.csv  Penicillin_Metadata.csv  point_report.db
Dashboard/Drift_detectors/: README.md  algorithm_metadata.yaml  drift_detectors.py  generate_doc.py  metadata_utils.py  multivariate_drift.py  setup.py  test_script.py  univariate_drift.py
Dashboard/Drift_detectors/old_code/: psi_drift_to_check.py
Dashboard/InfluxDb/: InfluxDBHandler.py  InfluxDBServices.py  __init__.py
Dashboard/Prediction/: modelPredictor.py
Dashboard/assets/: styles.css
Dashboard/callbacks/: __init__.py  callback_data_drift.py  callback_data_source.py  callback_maintenance.py  callback_model_upload.py  callback_performance_estimator.py  callback_sidebar.py  callback_softsensor_offline.py  callback_softsensor_online.py
Dashboard/components/: sidebar.py
Dashboard/layouts/: main_layout.py
Dashboard/pages/: about_us.py  data_drift.py  data_source.py  help.py  home.py  maintenance.py  model_details_view.py  model_upload.py  not_found.py  performance_estimator.py  softsensor_offline.py  softsensor_online.py
Dashboard/utils/: __init__.py  model_config_loader.py  utils_SQLiteHandler.py  utils_apiclient.py  utils_data_drift.py  utils_data_source.py  utils_global.py  utils_maintenance.py  utils_model_information.py  utils_performance_estimator.py  utils_sofsensors_offline.py  utils_softsensors_online.py
data/: point_report.db
src/Dashboard/: .gitignore  .gitmodules  app.py  config.py
src/Dashboard/Data/: IndPenSim_testset.csv  Penicillin_Metadata.csv  point_report.db
src/Dashboard/InfluxDb/: InfluxDBHandler.py  InfluxDBServices.py  __init__.py
src/Dashboard/assets/: bootstrap-icons.css  styles.css
src/Dashboard/callbacks/: __init__.py  callback_auth.py  callback_data_drift.py  callback_data_source.py  callback_maintenance.py  callback_model_upload.py  callback_performance_estimator.py  callback_sidebar.py  callback_softsensor_offline.py  callback_softsensor_online.py  callback_softsensors.py
src/Dashboard/components/: sidebar.py
src/Dashboard/db_connector/: .env.example  .gitignore  README.md  pyproject.toml
src/Dashboard/db_connector/multi_db_connector/: base.py  factory.py  influxdb_connector.py  postgres_connector.py
src/Dashboard/db_connector/tests/: test_factory.py
src/Dashboard/drift_detectors_pack/: README.md  pyproject.toml  requirements.txt
src/Dashboard/layouts/: main_layout.py
src/Dashboard/models/: user_model.py
src/Dashboard/pages/: about_us.py  admin_panel.py  data_drift.py  data_source.py  help.py  maintenance.py  model_details_view.py  (+5 more)
stamm_dashboard/: app.py  config.py
stamm_dashboard/InfluxDb/: InfluxDBHandler.py  __init__.py
stamm_dashboard/Prediction/: modelPredictor.py
stamm_dashboard/R/: 0002_[R]_penicillin_RF__REST__.R  0003_[R]_penicillin_CUBIST__REST__.R  [R]__ML__loader__.R  main.R
stamm_dashboard/assets/: styles.css
stamm_dashboard/callbacks/: __init__.py  callback_data_drift.py  callback_data_source.py  callback_model_upload.py  callback_performance_estimator.py  callback_sidebar.py  callback_softsensor_offline.py  callback_softsensor_online.py
stamm_dashboard/components/: sidebar.py
stamm_dashboard/layouts/: main_layout.py
stamm_dashboard/pages/: about_us.py  data_drift.py  data_source.py  home.py  model_details_view.py  model_upload.py  performance_estimator.py  softsensor_offline.py  softsensor_online.py
stamm_dashboard/utils/: __init__.py  model_config_loader.py  utils_data_source.py  utils_global.py  utils_performance_estimator.py  utils_sofsensors_offline.py  utils_softsensors_online.py
(+32 files in other folders)
